--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.6.1",
     "react-js-pagination": "^2.2.0",
     "react-scripts": "1.0.13",
+    "react-transition-group": "^2.2.1",
     "unsplash-js": "^4.6.0"
   },
   "scripts": {
