--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-js-pagination": "^2.2.0",
-    "react-scripts": "1.0.13",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-js-pagination": "^3.0.0",
+    "react-scripts": "^1.0.17",
     "react-transition-group": "^2.2.1",
     "unsplash-js": "^4.6.0"
   },
