--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "cacheDirectories": [
     "node_modules",
-    "react-ui/node_modules"
+    "client/node_modules"
   ],
   "dependencies": {
     "express": "^4.14.1"
