--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^16.2.0",
     "react-js-pagination": "^3.0.0",
     "react-scripts": "^1.0.17",
-    "react-transition-group": "^2.2.1",
-    "unsplash-js": "^4.6.0"
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
