--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "client/node_modules"
   ],
   "dependencies": {
-    "express": "^4.14.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.14.1",
+    "request": "^2.83.0",
+    "unsplash-js": "^4.6.0"
   },
   "devDependencies": {}
 }
