--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-js-pagination": "^3.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.17",
     "react-transition-group": "^2.2.1"
   },
